# pixel-detector-v2

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_BATCH_CHECKPOINT_GUIDE.md  DOCKER_DEPLOYMENT.md  DOCKER_FIXES_APPLIED.md  DOCKER_SAFE_SCANNING.md  Dockerfile  Dockerfile.api  Dockerfile.corporate  Dockerfile.lambda  Dockerfile.production  Dockerfile.safe  Dockerfile.secure  LAMBDA_QUICK_START.md  LICENSE  LOCAL_DOCKER_VSCODE_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  QUICK_START_INSURERS.md  README.md  RELEASE_v0.3.0.md  TESTING.md  V03_RELEASE_CHECKLIST.md  VALIDATION_RESULTS.md  WHY_THIS_MATTERS.md  build-with-proxy.sh  create_new_repo.sh  deploy_lambda_v03.sh  docker-compose.batch.yml  docker-compose.yml  docker_wrapper.py  example.py  lambda_handler.py  monitor_scan.py  production_scanner.py  pyproject.toml  santa_clara_healthcare.txt  test_docker_setup.sh  url_handler.py  (+1 more)
.github/workflows/: test.yml
docs/: CONSENT_PLATFORMS.md  LOCAL_DEVELOPMENT.md  README.md  TESTING.md  TESTING_ACHIEVEMENTS.md  TEST_FIXTURES.md
docs/analysis/: CYBER_INSURANCE_BUSINESS_CASE.md  GAPS_ANALYSIS.md  README_IMPROVEMENTS.md
docs/architecture/: ARCHITECTURE_DIAGRAM.md
docs/archive/: FARGATE_DEPLOYMENT.md
docs/business/: CYBER_INSURANCE_ADOPTION.md
docs/presentations/: EXECUTIVE_SUMMARY.md  PRESENTATION_SLIDES.md
example_results/ny_healthcare_2025/: NY_HEALTHCARE_ANALYSIS.md  README.md  WORKFLOW_GUIDE.md  example_scan_result.json  institution_names.md  summary.json
examples/: consent_gap_analysis.py
examples/insurance/: README.md  enterprise_api.py  risk_scoring.py
scripts/: get_top_healthcare_sites.py
src/pixel_detector/: __init__.py  __main__.py  api.py  batch_manager.py  batch_processor.py  cli.py  logging_config.py  production_batch_scanner.py  run_batch.py  scanner.py
src/pixel_detector/consent_testing/: __init__.py  banner_interaction.py  button_selectors.py  compliance_checker.py
src/pixel_detector/detectors/: __init__.py  base.py  cookiebot.py  google.py  linkedin.py  meta.py  onetrust.py  osano.py  pinterest.py  registry.py  snapchat.py  termly.py  tiktok.py  trustarc.py  twitter.py  usercentrics.py
src/pixel_detector/models/: __init__.py  consent_test.py  pixel_detection.py
src/pixel_detector/utils/: health_check.py  retry.py  url_normalizer.py
tests/: conftest.py  test_cli.py  test_consent_detectors.py  test_consent_testing.py  test_detectors_all.py  test_detectors_base.py  test_insurance_workflows.py  test_lambda_handler.py  test_models.py  test_scanner.py
