[project]
name = "pixel-detector"
version = "0.3.0"
description = "Healthcare website pixel tracking detection system"
authors = [
    {name = "Ming Yang"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.41.0",
    "playwright-stealth==1.0.6",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "dnspython>=2.6.0",
    "boto3>=1.34.0",
    "tldextract>=5.1.3",
    "setuptools>=78.1.1",
    "idna>=3.10",
]

[project.optional-dependencies]
lambda = ["awslambdaric>=2.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[project.scripts]
pixel-detector = "pixel_detector.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixel_detector"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "Q"]
ignore = ["S101", "B008", "UP007"]  # S101: assert in tests, B008: typer defaults, UP007: Optional[T] for typer compat

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
